# not_yet_decided

./: .env.example  .gitignore  CHALLENGE.md  README.md  config.yaml  constants.py  eval.py  explore_keys.ipynb  initialize_db.py  main.py  matching_utils.py  models.py  package.json  prompts.py  pyproject.toml  requirements.txt  test_qdrant.py  vercel.json
api/: chat.py  health.py
backend/: __init__.py  api.py  matcher_service.py
backend/api/: index.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  response_builder.py  routes.py
backend/app/core/: __init__.py  config.py  models.py
backend/app/db/: __init__.py  client.py  migrate.py  repository.py  schema.sql
backend/app/retrieval/: enrichment.py  (+3 more)
backend/tests/: test_api.py  test_matching.py
data/: example_submission.json  matched_cyberport.json  matched_electronic4you.json  matched_etec.json  matched_expert.json  raw_electronic4you.json  source_products_large_appliances.json  source_products_small_appliances.json  source_products_tv_&_audio.json  target_pool_small_appliances.json  target_pool_tv_&_audio.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
output/: competitor_matches.json  matched_cyberport.json  matched_electronic4you.json  matched_etec.json  matched_expert.json  raw_brave_large_appliances.json  raw_brave_small_appliances.json  raw_cyberport.json  raw_etec.json  raw_expert.json  sample_submission_format.json  scraped_small_appliances.json  scraped_tv_audio.json  scraped_tv_audio_v2.json  submission_step1.json
retrieval/: embeddings.py  enrichment.py  generation.py  indexing.py  qdrant_retrieval.py  query_expansion.py
scrape/: .env  build_submission.py  match_targets.py  merge_brave_to_matched.py  parser_raw.py  scraped_brave.json  scraper_brave.py  scraper_playwright.py
scripts/: step1.py
tests/: test1.json  test_backend_query.py  test_matching.py
(+19 files in other folders)
