[project]
name = "not-yet-decided"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "claude-agent-sdk",
    "anthropic",
    "requests>=2.32.5",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "pandas>=3.0.1",
    "fastembed>=0.7.4",
    "qdrant-client>=1.17.0",
    "scikit-learn>=1.8.0",
    "openai>=2.26.0",
]
